Fixed alignment issues

--- a/components/sections/section/section.style.css
+++ b/components/sections/section/section.style.css
@@ -40,10 +40,6 @@ hr{
 }
 
 .icons{
-	margin-top: -40px;
-}
-
-.icons2{
 	margin-top: -15px;
 }
 
@@ -112,7 +108,7 @@ hr{
 }
 
 #pageheader{
-	height: 700px;
+	height: 800px;
 }
 
 .chance{
